--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -912,6 +912,15 @@ border-radius: 0.5rem;
     padding: 0 0.5rem;
   }
   
+  .about__buttons{
+    display: flex;
+    flex-direction: column;
+    
+  
+  }
+  .button{
+    margin-top: 10px;
+  }
 }
 
 
